# stockshelp

./: .gitignore  main.py  pyproject.toml  requirements.txt  stock.txt
static/: style.css
templates/: index.html
