[tool.poetry]
name = "repl_python3_stockshelp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
yfinance = "^0.1.69"
Flask-Compress = "^1.10.1"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
